@@ -166,7 +166,8 @@ if ($db_working) {
     }
     else if ($RCI->db_schema_check($DB, $update = !empty($_POST['updatedb']))) {
         $RCI->fail('DB Schema', "Database schema differs");
-        $updatefile = INSTALL_PATH . 'SQL/' . $DB->db_provider . '.update.sql';
+        $db_map = array('pgsql' => 'postgres', 'mysqli' => 'mysql', 'sqlsrv' => 'mssql');
+        $updatefile = INSTALL_PATH . 'SQL/' . (isset($db_map[$DB->db_provider]) ? $db_map[$DB->db_provider] : $DB->db_provider) . '.update.sql';
         echo '<p class="warning">Please manually execute the SQL statements from '.$updatefile.' on your database.<br/>';
         echo 'See comments in the file and execute queries that are superscribed with the currently installed version number.</p>';
         $db_working = false;
